change status part-end + mini-refac

--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -2,10 +2,7 @@
 
     {% for project in projects %}
     <div id="card_{{project.id}}" class="bg-gray-50 border border-gray-200 rounded-lg hover:border-blue-300 transition-colors">
-      <form action="{% url 'teams:projects:project_status_changes' project.id %}" method="post" id="statusForm_{{project.id}}">
-        {% csrf_token %}
-        <input type="hidden" name="status" id="statusInput_{{project.id}}">
-      </form>
+
       <div class="flex flex-col sm:flex-row items-start sm:items-center gap-4 p-4">
         <!-- Изображение/иконка -->
           {% if project.image %}
@@ -20,47 +17,12 @@
         
         <!-- Основное содержимое -->
         <div class="flex-1 min-w-0">
-          <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2">
-            <div>
-              <h3 class="text-lg font-semibold text-gray-800 truncate">{{ project.name }}</h3>
-              <p class="text-gray-500 text-sm line-clamp-1">{{ project.description }}</p>
-            </div>
-            
 
-
-            <div class="dropdown">
-              <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{project.status_text}} text-sm font-medium {{project.status_color}} border border-gray-400">{{ project.status }} <i class='fas fa-angle-down mt-1'></i></div>
-              <ul tabindex="0" class="dropdown-content menu text-gray-600 bg-white border border-gray-300 rounded-box z-[1] w-48 p-2 shadow-sm">
-                <li>
-                  <a onclick="changeStatus('{{status_choices.IN_WORK}}', '{{project.id}}')" class="flex items-center gap-2">
-                    <span class="w-2.5 h-2.5 rounded-full bg-green-500"></span>
-                    {{ status_choices.IN_WORK }}
-                  </a>
-                </li>
-                <li>
-                  <a onclick="changeStatus('{{status_choices.STOPPED}}', '{{project.id}}')" class="flex items-center gap-2">
-                    <span class="w-2.5 h-2.5 rounded-full bg-yellow-400"></span>
-                    {{ status_choices.STOPPED }}
-                  </a>
-                </li>
-                <li>
-                  <a onclick="changeStatus('{{status_choices.COMPLETED}}', '{{project.id}}')" class="flex items-center gap-2">
-                    <span class="w-2.5 h-2.5 rounded-full bg-red-400"></span>
-                    {{ status_choices.COMPLETED }}
-                  </a>
-                </li>
-              </ul>
-            </div>
+          <div>
+            <h3 class="text-lg font-semibold text-gray-800 truncate">{{ project.name }}</h3>
+            <p class="text-gray-500 text-sm line-clamp-1">{{ project.description }}</p>
           </div>
-          <script>
-            function changeStatus(status, projectId){
-              const form = document.getElementById(`statusForm_${projectId}`)
-              const input = document.getElementById(`statusInput_${projectId}`)
-              input.value = status
-              form.submit();
-            };
-          </script>
-          
+
           <div class="flex flex-wrap items-center gap-x-4 gap-y-2 mt-2 text-sm text-gray-500">
             <div class="flex items-center">
               <i class="fas fa-users mr-1.5 text-gray-400"></i>
@@ -76,6 +38,12 @@
             </div>
           </div>
         </div>
+
+        <div id="status-container-{{project.id}}" class="flex flex-col justify-between sm:flex-row sm:items-center  gap-2">
+
+          {% include 'projects/includes/change-status.html' %}
+
+        </div>
         
         <!-- Кнопки действий -->
         <div class="flex gap-4 sm:ml-auto mt-2 sm:mt-0">
@@ -86,6 +54,7 @@
             <i class="fas fa-trash-alt"></i>
           </a>
         </div>
+    
       </div>
     </div>
     {% endfor %}
