--- a/Project_Manager/templates/includes/messages.html
+++ b/Project_Manager/templates/includes/messages.html
@@ -1,4 +1,14 @@
 
+<style>
+    #mtl{
+        color:#910091;
+        font-weight: bold;
+        text-decoration: underline ;
+    }
+    #mtl:hover{
+        color:red
+    }
+</style>
 
 <div class="fixed inset-0 flex items-start justify-center pt-16 pointer-events-none z-50">
     {% for message in messages %}
@@ -10,10 +20,10 @@
             &times;
         </span>
         <div class="text-center py-2 px-4 flex items-center justify-center">
-            <svg class="w-5 h-5 mr-2 text-green-500 dark:text-green-500" fill="currentColor" viewBox="0 0 20 20">
+            <svg class="w-7 h-7 mr-4 text-green-500 dark:text-green-500" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
             </svg>
-            {{ message }}
+            <p>{{ message }}</p>
         </div>
     </div>
     {% endfor %}
