--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -47,7 +47,7 @@
         
         <!-- Кнопки действий -->
         <div class="flex gap-4 sm:ml-auto mt-2 sm:mt-0">
-          <a href="{% url 'teams:projects:tasks:task_list' %}" class="px-4 py-1.5 text-sm font-medium rounded-md border border-blue-600 text-blue-600 hover:bg-blue-100 transition-colors cursor-pointer">
+          <a href="{% url 'teams:projects:tasks:task_list' project.team.id project.id  %}" class="px-4 py-1.5 text-sm font-medium rounded-md border border-blue-600 text-blue-600 hover:bg-blue-100 transition-colors cursor-pointer">
             Открыть
           </a>
           <a hx-delete="{% url 'teams:projects:delete_project' project.id %}" hx-target="#card_{{project.id}}" hx-swap="delete" class="p-1.5 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-md transition-colors cursor-pointer">
