template for status

--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -52,7 +52,7 @@
 
     <!-- Статус -->
     <div class="w-2/12">
-      <span class="badge badge-info text-[1.075rem] px-4 py-[0.75rem]">В процессе</span>
+      {% include 'tasks/includes/change-status.html' %}
     </div>
 
     <!-- Приоритет -->
