--- a/Project_Manager/templates/tasks/includes/change-status.html
+++ b/Project_Manager/templates/tasks/includes/change-status.html
@@ -1,12 +1,12 @@
 
 
 <div class="dropdown">
-    <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{project.status_text}} text-sm font-medium {{project.status_color}} border border-gray-400">{{task.status}}<i class='fas fa-angle-down ml-1 mt-1'></i></div>
+    <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{task.status.color.bg_color}} text-sm font-medium {{task.status.color.text_color}} border {{task.status.color.border_color}}">{{task.status}}<i class='fas fa-angle-down ml-1 mt-1'></i></div>
     <ul tabindex="0" class="dropdown-content menu text-gray-600 bg-white border border-gray-300 rounded-box z-[1] w-48 p-2 shadow-sm">
         {% for status in statuses %}
         <li>
             <a class="flex items-center gap-2">
-            <span class="w-2.5 h-2.5 rounded-full bg-green-500"></span>
+            <span class="w-2.5 h-2.5 rounded-full bg-{{status.color.color_name}}-500"></span>
             {{ status }}
             </a>
         </li>
