changing the status using htmx

--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Статус -->
-    <div class="w-2/12">
+    <div id="ysa-{{task.pk}}" class="w-2/12">
       {% include 'tasks/includes/change-status.html' %}
     </div>
 
