developing a template for a task

--- a/Project_Manager/templates/tasks/includes/header-tasks.html
+++ b/Project_Manager/templates/tasks/includes/header-tasks.html
@@ -1,6 +1,6 @@
+{% extends 'tasks/includes/base-header-task.html' %}
 
-
-<div id="header" class="bg-neutral-50 border border-gray-300 shadow-sm p-4 flex items-center justify-between border-b">
+{% block content %}
     
     <!-- Левая часть шапки - название/информация -->
     <div class="flex items-center space-x-4">
@@ -41,4 +41,4 @@
         <span class="text-sm text-gray-500">Текст</span>
     </div>
     
-</div>
+{% endblock content %}
