--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Статус -->
-    <div id="ysa-{{task.pk}}" class="w-2/12">
+    <div id="status-{{task.pk}}" class="w-2/12">
       {% include 'tasks/includes/change-status.html' %}
     </div>
 
