--- a/Project_Manager/templates/tasks/includes/header-detail-task.html
+++ b/Project_Manager/templates/tasks/includes/header-detail-task.html
@@ -5,7 +5,7 @@
 <!-- Левый блок -->
 <div class="flex items-center ml-4 space-x-4">
     <div class="text-xl font-semibold text-gray-800">
-      {{ task.name }}
+        {{ form.name.label_tag }}
     </div>
 </div>
 
