--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -8,7 +8,6 @@
 <div id="content" class="flex">
 
     <div class="w-4/5 bg-white border-l border-b border-gray-300 shadow-sm p-4 space-y-6">
-
         <!-- Блок описания -->
         <div>
           <details open class="group mb-4">
@@ -114,23 +113,53 @@
         <div>
           <h3 class="text-gray-700 font-bold text-base mb-1">Теги</h3>
         
-          <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" title="Выберите или создайте новый тег">
+          <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" onclick="add_tag_modal.showModal();" title="Выберите или создайте новый тег">
             
             <!-- Теги -->
             <div class="relative z-20 inline-flex flex-wrap gap-2 cursor-pointer">
               {% for t in task.tag.all %}
                 <span class="inline-flex items-center rounded-md cursor-default {{ t.color.bg_color }} px-2 py-1 text-sm font-medium border {{ t.color.border_color }} {{ t.color.text_color }}">
                   {{ t.name }}
-                  {{ t.name }}
                 </span>
               {% endfor %}
             </div>
         
             <!-- Фоновая зона, реагирующая на hover только свободной области -->
-            <div class="absolute inset-0 z-10 rounded-md bg-gray-200 opacity-0 group-hover:opacity-100"></div>
+            <div class="absolute inset-0 z-10 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-100"></div>
         
           </div>
         </div>
+
+        <dialog id="add_tag_modal" class="modal">
+          <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
+            <form method="post" action="">{% csrf_token %}
+              
+              <a class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="add_tag_modal.close();">✕</a>
+              <h3 class="text-2xl font-bold text-gray-800 mb-4">Теги</h3>
+              <!--  -->
+              <div>
+
+                <div class="flex flex-wrap gap-2">
+                  {% for tag in form.tag.field.queryset %}
+                    <label class="cursor-pointer">
+                      <input type="checkbox" name="tag" value="{{ tag.id }}"
+                            {% if tag in form.initial.tag or tag in form.data.tag %}checked{% endif %}
+                            class="hidden peer">
+                      <span class="peer-checked:{{tag.color.bg_color}} peer-checked:{{tag.color.text_color}} peer-checked:{{tag.color.border_color}}
+                                  bg-gray-200 text-gray-700 px-3 py-1 border rounded-full transition-all duration-200">
+                        {{ tag.name }}
+                      </span>
+                    </label>
+                  {% endfor %}
+                </div>
+              </div>
+              <!--  -->
+              <div class="modal-action mt-6">
+                <button class="btn btn-primary text-sm text-white" name="tags" type="submit">Сохранить</button>
+              </div>
+            </form>
+          </div>
+      </dialog>
         
     
         <div>
@@ -142,8 +171,7 @@
           <h3 class="text-gray-700 font-bold text-base mb-1">Автор</h3>
           <p class="text-gray-700">Петровец</p>
         </div>
-    
-      </div>
+    </div>
 
 </div>
 
