--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -58,7 +58,7 @@
 
     <!-- Приоритет -->
     <div class="w-2/12">
-      <span class="badge badge-error text-[1.075rem] px-4 py-[0.75rem]">Высокий приоритет</span>
+      <span class="badge badge-error text-[1.075rem] px-4 py-[0.75rem]">{{task.priority}}</span>
     </div>
   </div>
   {% endfor %}
