--- a/Project_Manager/templates/tasks/includes/header-tasks.html
+++ b/Project_Manager/templates/tasks/includes/header-tasks.html
@@ -30,8 +30,8 @@
     </div>
     
     <div>
-        <a href="" class="inline-block px-5 py-2 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-blue-300 transition-all duration-200 font-medium">
-            Текст
+        <a href="{% url 'teams:projects:project_list' project.team.pk %}" class="inline-block px-5 py-2 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-blue-300 transition-all duration-200 font-medium">
+            Назад к проектам
         </a>
     </div>
 
