--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -174,7 +174,7 @@
     
         <div>
           <h3 class="text-gray-700 font-bold text-base mb-1">Автор</h3>
-          <p class="text-gray-700">Петровец</p>
+          <p class="text-gray-700">{{task.creator}}</p>
         </div>
     </div>
 
