--- a/Project_Manager/templates/projects/project-settings.html
+++ b/Project_Manager/templates/projects/project-settings.html
@@ -6,6 +6,9 @@
 {% include 'tasks/includes/header-tasks.html' %}
 
 
-  
+<div>
+    {% block configuration_content %}
+    {% endblock configuration_content %}
+</div>
   
 {% endblock content %}
