--- a/Project_Manager/templates/tasks/includes/header-tasks.html
+++ b/Project_Manager/templates/tasks/includes/header-tasks.html
@@ -10,19 +10,19 @@
             Задачи
         </a>
         
-        <!-- Кнопка "Конфигурация" -->
-        <a href="{% url 'teams:projects:project_settings' project.team.pk project.pk %}" class="btn btn-outline btn-sm flex items-center">
-            <i class="fas fa-cog mr-2"></i>
-            Настройки проекта
-        </a>
-        
         <!-- Выпадающее меню "Прочее" -->
         <div class="dropdown dropdown-end">
             <div tabindex="0" role="button" class="btn btn-outline btn-sm flex items-center">
                 <i class="fas fa-ellipsis-h mr-2"></i>
-                Выпадающий список
+                Конфигурация
             </div>
             <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-neutral-50 rounded-box w-52">
+                <li><a href="{% url 'teams:projects:project_settings' project.team.pk project.pk %}" class="flex items-center">
+                    <i class="fas fa-cog mr-2"></i>
+                    Настройки проекта
+                    </a>
+                </li>
+                <li><a href="{% url 'teams:projects:project_members' project.team.pk project.pk %}"><i class="fas fa-users mr-2"></i>Участники</a></li>
                 <li><a><i class="fas fa-history mr-2"></i>История изменений</a></li>
                 <li><a class="text-red-500 hover:text-white hover:bg-red-500"><i class="fas fa-trash mr-2"></i>Удалить</a></li>
             </ul>
