added a list of tags for the project + bug fix

--- a/Project_Manager/templates/tasks/includes/add-status-modal.html
+++ b/Project_Manager/templates/tasks/includes/add-status-modal.html
@@ -2,6 +2,7 @@
 
 {% load task_url %}
 
+{% if project.tasks.exists %}
 <dialog id="modal_create_status" class="modal">
     <div class="modal-box bg-gray-100 shadow-xl text-base-content rounded-lg">
         <button onclick="this.closest('dialog').close();" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
@@ -73,3 +74,4 @@
         </form>
     </div>
 </dialog>
+{% endif %}
