--- a/Project_Manager/templates/projects/includes/tags.html
+++ b/Project_Manager/templates/projects/includes/tags.html
@@ -3,7 +3,7 @@
 {% block configuration_content %}
 
 <div class="p-6 mx-auto">
-    <table class="table w-full">
+    <table id="tbl" class="table w-full">
         <thead class="bg-gray-50">
             <tr class="text-gray-600 uppercase text-sm leading-normal">
                 <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
@@ -12,15 +12,10 @@
                 <th class="w-10 py-3 px-6 text-left font-semibold"></th>
             </tr>
         </thead>
-        <tbody class="text-gray-600 text-sm font-light">
+        <tbody id="tbs" class="text-gray-600 text-sm font-light">
             {% for tag in tags %}
-            <tr class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
-                <td class="w-10 py-3 px-3 text-center whitespace-nowrap text-base">{{ forloop.counter }}</td>
-                <td class="py-3 px-6 text-left font-bold text-base"><span class="inline-flex items-center rounded-md {{ tag.color.bg_color }} px-2 py-1 text-sm font-medium border {{ tag.color.border_color }} {{ tag.color.text_color }}">{{ tag.name }}</span></td>
-                <td class="py-3 px-6 text-left font-bold text-base">{{ tag.color }}</td>
-                <td class="py-3 px-6 text-left text-red-600 hover:bg-red-500 hover:text-white rounded-xl cursor-pointer" title="Исключить из команды">
-                    <i class="fa fa-trash"></i>
-                </td>
+            <tr id="st-{{tag.pk}}" class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
+                {% include 'projects/includes/tag.html' %}
             </tr>
             {% endfor %}
         </tbody>
