--- a/Project_Manager/templates/projects/includes/tags.html
+++ b/Project_Manager/templates/projects/includes/tags.html
@@ -17,8 +17,8 @@
                 placeholder="Поиск..." 
                 class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
                 hx-get="{% url 'teams:projects:search_tags' project.team.pk project.pk %}"
-                hx-trigger="keyup"
-                hx-target="#tbs"
+                hx-trigger="keyup delay:200ms"
+                hx-target="#tag-list"
             />
             <svg 
                 class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
@@ -54,8 +54,8 @@
                 <th class="w-10 py-3 px-6 text-left font-semibold"></th>
             </tr>
         </thead>
-        <tbody id="tbs" class="text-gray-600 text-sm font-light">
-            {% include 'projects/includes/taggs.html' %}
+        <tbody id="tag-list" class="text-gray-600 text-sm font-light">
+            {% include 'projects/includes/tags_list_partial.html' %}
         </tbody>
     </table>
 </div>
