--- a/Project_Manager/templates/projects/includes/statuses.html
+++ b/Project_Manager/templates/projects/includes/statuses.html
@@ -16,9 +16,7 @@
                 name="input_search"
                 placeholder="Поиск..." 
                 class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
-                hx-get="{% url 'teams:projects:search_tags' project.team.pk project.pk %}"
-                hx-trigger="keyup delay:200ms"
-                hx-target="#tag-list"
+
             />
             <svg 
                 class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
@@ -37,10 +35,10 @@
     </div>
 
     <div class="flex-none">
-      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="">
+      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_status.showModal();">
           Добавить статус
       </button>
-      
+      {% include 'projects/includes/create-status.html' %}
     </div>
 
   </div>
