--- a/Project_Manager/templates/projects/includes/statuses.html
+++ b/Project_Manager/templates/projects/includes/statuses.html
@@ -16,7 +16,9 @@
                 name="input_search"
                 placeholder="Поиск..." 
                 class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
-
+                hx-get="{% url 'teams:projects:search_status' project.team.pk project.pk %}"
+                hx-trigger="keyup delay:200ms"
+                hx-target="#status-list"
             />
             <svg 
                 class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
@@ -60,19 +62,7 @@
             </tr>
         </thead>
         <tbody id="status-list" class="text-gray-600 text-sm font-light">
-            {% for status in statuses %}
-            <tr class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
-                <td class="w-10 py-3 px-3 text-center whitespace-nowrap text-base">{{forloop.counter}}</td>
-                <td class="py-3 px-6 text-left font-bold text-base"><span class="inline-flex items-center rounded-md {{ status.color.bg_color }} px-2 py-1 text-sm font-medium border {{ status.color.border_color }} {{ status.color.text_color }}">{{ status.name }}</span></td>
-                <td class="py-3 px-6 text-left font-bold text-base">{{status.color}}</td>
-                <td class="py-3 px-6 text-left font-bold text-base">{{status.is_completed|yesno:"Да,Нет"}}</td>
-                <td class="py-1 px-4 text-left">
-                    <a class="block text-red-600 hover:bg-red-500 hover:text-white rounded-xl px-5 py-4 cursor-pointer transition" title="Удалить статус">
-                        <i class="fa fa-trash"></i>
-                    </a>
-                </td>
-            </tr>
-            {% endfor %}
+            {% include 'projects/includes/status-list.html' %}
         </tbody>
     </table>
 </div>
