--- a/Project_Manager/templates/tasks/includes/add-status-modal.html
+++ b/Project_Manager/templates/tasks/includes/add-status-modal.html
@@ -7,7 +7,7 @@
     <div class="modal-box bg-gray-100 shadow-xl text-base-content rounded-lg">
         <button onclick="this.closest('dialog').close();" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         <h3 class="text-2xl text-gray-600 font-bold">Добавить статус</h3>
-        <form action="{% url_task tasks|first 'create_status' %}" method="post">{% csrf_token %}
+        <form action="{% url 'teams:projects:create_status' project.team.pk project.pk %}" method="post">{% csrf_token %}
             
             <!-- Название -->
             <div class="mb-4">
